--- a/public/sass/old-ie.scss
+++ b/public/sass/old-ie.scss
@@ -1,28 +1,3 @@
 @import "_variables.scss";
 
-#no-ie {
-  display: block!important;
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  background: $colorWhite;
-  color: $colorBlack;
-  position: fixed;
-  z-index: 99999;
-  padding-top: 100px;
-}
-
-#no-ie h4 {
-  text-align: center;
-  max-width: 800px;
-  margin: 0 auto;
-  color: $colorBlack;
-}
-
-#no-ie img {
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 20px;
-  width: 400px;
-  max-width: 100%;
-}
+// Put any special IE styles here and enable in _document.js if you need to target.
