--- a/public/sass/modules/blogs.module.scss
+++ b/public/sass/modules/blogs.module.scss
@@ -3,10 +3,11 @@
 .contentWrap {
   margin: 0 auto;
   padding: 16px 0;
+  max-width: 100%;
   @media screen and (min-width: 640px) {
     max-width: 640px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 992px) {
     max-width: 840px;
     padding: 24px 0;
   }
@@ -17,6 +18,26 @@
     @media screen and ( min-width: 1280px ) {
       margin-bottom: 24px;
       font-size: 28px;
+    }
+  }
+
+  .grid {
+    display: block;
+    @media screen and (min-width: 767px) {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+    }
+
+    .block {
+      flex: 100%;
+      margin-bottom: 12px;
+      @media screen and (min-width: 767px) {
+        flex: 45%;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 24px;
+      }
     }
   }
 
