--- a/public/sass/modules/components/blogcard.module.scss
+++ b/public/sass/modules/components/blogcard.module.scss
@@ -1,30 +1,26 @@
 @import "../../_variables.scss";
 
 .card {
-  border-radius: 4px;
-  padding: 16px;
-  @media screen and ( min-width: 640px ) {
-    text-align: left;
-    display: flex;
-    justify-content: center;
-    padding: 24px;
-  }
-
-  @media screen and ( min-width: 992px ) {
-    padding: 32px;
-  }
-
   .content {
-    width: 100%;
-
-    h3 {
-      font-size: 22px;
-      line-height: 28px;
-      font-weight: 700;
+    a {
+      text-decoration: none;
     }
-
+    h3 {
+      margin: 8px 0;
+    }
+    .thumbnail {
+      cursor: pointer;
+      position: relative;
+      img {
+        color: transparent;
+        object-fit: cover;
+        width: 100%;
+        max-width: 100%;
+      }
+    }
     .excerpt {
-      font-size: 18px;
+      font-size: 16px;
+      line-height: 1.2;
     }
   }
 }
