--- a/public/sass/modules/components/header.module.scss
+++ b/public/sass/modules/components/header.module.scss
@@ -12,6 +12,8 @@
 
   .menuToggle {
     z-index: 3000;
+    background: none;
+    border: none;
     @media screen and ( min-width: 992px ) {
       display: none;
     }
@@ -19,6 +21,7 @@
 
   .burger {
     display: block;
+    background: none;
     width: 30px;
     height: 22.5px;
     -webkit-transform: rotate(0deg);
@@ -39,7 +42,7 @@
       position: absolute;
       height: 2.5px;
       width: 100%;
-      background: $colorRed;
+      background: $colorBlack;
       border-radius: 4.5px;
       opacity: 1;
       left: 0;
@@ -114,8 +117,10 @@
       margin: 0;
       list-style-type: none;
       li {
+        position: relative;
         float: left;
         margin: 0 8px;
+        padding: 0 24px;
         a {
           font-size: 14px;
           @media screen and ( min-width: 992px ) {
@@ -132,6 +137,12 @@
           }
         }
 
+        .menuCaret {
+          position: absolute;
+          top: 6px;
+          right: 0;
+        }
+
         .subMenu {
           list-style-type: none;
           margin: 0;
@@ -146,14 +157,18 @@
             z-index: 99999;
           }
 
-          li a {
-            background: none;
-            font-size: 14px;
+          li {
+            padding: 8px 0;
+            a {
+              background: none;
+              font-size: 14px;
+            }
           }
         }
 
         &:hover > .subMenu {
           left: auto;
+          padding: 0;
         }
       }
     }
