--- a/public/sass/modules/videos.module.scss
+++ b/public/sass/modules/videos.module.scss
@@ -3,20 +3,39 @@
 .contentWrap {
   margin: 0 auto;
   padding: 16px 0;
+  max-width: 100%;
   @media screen and (min-width: 640px) {
     max-width: 640px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 992px) {
     max-width: 840px;
     padding: 24px 0;
   }
   .pageTitle {
     position: relative;
-    margin-bottom: 32px;
-    font-size: 26px;
-    @media screen and ( min-width: 992px ) {
-      margin-bottom: 48px;
-      font-size: 36px;
+    margin-bottom: 16px;
+    font-size: 20px;
+    @media screen and ( min-width: 1280px ) {
+      margin-bottom: 24px;
+      font-size: 28px;
+    }
+  }
+
+  .grid {
+    display: block;
+    @media screen and (min-width: 767px) {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+    }
+
+    .block {
+      flex: 100%;
+      @media screen and (min-width: 767px) {
+        flex: 45%;
+        padding-left: 10px;
+        padding-right: 10px;
+      }
     }
   }
 
